--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,7 @@ $half-viewport-height: 50vh;
 
 // Breakpoints
 $break-large: "screen and (max-width: 768px)";
+$break-larger: "screen and (max-width: 1024px)";
 $break-landscape: "screen and (max-width: 736px)";
 $break-medium: "screen and (max-width: 438px)";
 $break-huge: "screen and (min-width: 1550px)";
